support PNG image file

--- a/reflection_demo/Makefile
+++ b/reflection_demo/Makefile
@@ -1,7 +1,7 @@
 
 CXX := g++
 CXXFLAGS := -Wall -g -I/opt/local/include -I$(HOME)/local/include
-LDFLAGS := -L/opt/local/lib -L$(HOME)/local/lib -lopenctm -lglfw -framework Cocoa -framework OpenGL
+LDFLAGS := -L/opt/local/lib -L$(HOME)/local/lib -lopenctm -lglfw -lpng -framework Cocoa -framework OpenGL
 TARGET := reflection_demo
 OBJECTS := $(patsubst %.cpp,%.o,$(wildcard *.cpp))
 
